# quantitative_log

./: .env.example  .gitignore  README.md  install.py  prompt.md  pyproject.toml
common/: rep_config.py
dataset/: mixer_dataset.py  rep_dataset.py  rep_feature_engineering.py  save_daily_data.py
docs/: mixer.md  rep.md
docs/分享/: basic-01.md  量化简介.md
infer/: run_rep_model.py
model/: mixer_mlp_model.py  rep_lstm_model.py
tools/: basic_info_tool.py  duckdb_client.py  fix_code_tool.py  get_data_tool.py
train/: train_eval_rep.py
z_test/: ths02.py  tonghuashun.py
z_test/deal_ths_data/: get_ohlcv_data.py  get_ohlcv_data_yearly.py  get_trade_code.py  get_trade_date.py  ohlcv_data_core.py
z_using_files/backtrader/: Backtrader-交易-核心-03.md  Backtrader-交易-核心-04.md  Backtrader-交易-核心-05.md  Backtrader-交易-核心-06.md  Backtrader-介绍-01.md  Backtrader-指标-02.md
z_using_files/backtrader_code/: strategy_01.py  strategy_03.py  strategy_04.py  zz500_data.py
z_utils/: db_cache.py  get_json.py  get_proxy.py  get_tree.py  logging_config.py  remove_comments.py  rsa.py  run_ssh.py
